app/assets/stylesheets/chat/buddy_list.scss
.buddy-list {
  @include windows-95-pane;

  width: 200px;
  height: 500px;

  display: flex;
  flex-flow: column;

  position: fixed;
}

.buddy-list-content {
  flex: 1;

  padding: 5px;

  display: flex;
  flex-flow: column;
}

.button-row {
  display: flex;
  flex-flow: row;
  justify-content: space-between;

  button {
    font-size: 13px;
  }
}

.channel-index {
  @include text-input;

  flex: 1;

  padding: 5px 8px;

  li {
    cursor: pointer;

    &:hover {
      background-color: $square-title-logo-yellow;
    }
  }
}

